Update Darkness style

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -1,5 +1,5 @@
 :root[data-theme="dark"] {
-  --primary: #9e9e9e !important;
+  --primary: #b3b3b3 !important;
   --text-color: #e0e0e0;
   --text-color1: #bbb;
   --text-color2: #999;
@@ -9,29 +9,29 @@
   --secondary: #6f6f6f;
   --link-color: #eeeeeebd;
   --red: #eb5424aa;
-  --red-light: #fdf1ed17;
+  --red-light: #fdf1ed10;
   --yellow: #fee209aa;
-  --yellow-light: #fffdee17;
+  --yellow-light: #fffdee10;
   --blue: #2275daaa;
-  --blue-light: #e6f0fb17;
+  --blue-light: #e6f0fb10;
   --green: #19a302aa;
-  --green-light: #f4fff217;
+  --green-light: #f4fff210;
 
   --divider-color: rgba(255, 255, 255, 0.1);
 
-  --btn-default-text-color: #a9a9a9a8;
+  --btn-default-text-color: #c7c7c7;
   --btn-default-background-color: #3d3d3d99;
-  --btn-default-border-color: #1c1c1d;
-  --btn-default-active-background-color: #3d3d3d77;
+  --btn-default-border-color: #414144;
+  --btn-default-active-background-color: #3f3e4299;
   --btn-default-active-border-color: #1c1c1d;
   --btn-default-active-text-color: #eeeeeebd;
-  --btn-default-hover-border-color: #1c1c1d;
+  --btn-default-hover-border-color: #414144;
 
-  --form-control-background-color: #101010;
-  --form-control-border-color: #3d3d3d3b;
-  --form-control-disabled-background-color: #27272796;
+  --form-control-background-color: #0104094d;
+  --form-control-border-color: #21262d;
+  --form-control-disabled-background-color: #1a1a1f;
 
-  --input-group-background-color: #1e1e1e;
+  --input-group-background-color: #1a1a1f;
   --input-group-border-color: #3d3d3d3b;
 
   --body-background-color: #000;
@@ -49,26 +49,26 @@
 
   --navbar-topic-title-background-color: #151516;
 
-  --card-border-color: #3d3d3d29;
-  --card-background-color: #181819;
+  --card-border-color: #a3acd024;
+  --card-background-color: #dcdcff0f;
   --card-title-secondary-color: #777;
 
-  --dropdown-menu-background-color: #222222ee;
+  --dropdown-menu-background-color: #1a1a1aee;
   --dropdown-menu-text-color: #a9a9a9a8;
-  --dropdown-menu-divider-color: #3d3d3d99;
+  --dropdown-menu-divider-color: #32323299;
 
   --dropdown-item-active-background-color: rgba(200, 200, 200, 0.1);
   --dropdown-item-active-text-color: #fff;
 
-  --modal-background-color: #2d2d2d;
+  --modal-background-color: #1a1a1a;
   --modal-shadow-color: rgba(0, 0, 0, 0.19);
 
   --list-group-item-border-color: #3d3d3d99;
 
   --table-border-color: #36373ab5;
 
-  --topic-item-border-color: #3d3d3d99;
-  --topic-item-hover-background-color: #222;
+  --topic-item-border-color: #a3acd024;
+  --topic-item-hover-background-color: #dcdcff0f;
 
   --label-awesome-background-color: #f9cd940d;
 
@@ -79,7 +79,7 @@
   --scrollbar-thumb-color: #333333aa;
   --scrollbar-track-color: transparent;
 
-  --nav-pills-active-background-color: #9e9e9e36;
+  --nav-pills-active-background-color: #27272da1;
   --nav-pills-active-text-color: #fff;
 }
 
