Fix btn:active style

--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -22,10 +22,10 @@
   --btn-default-text-color: #c7c7c7;
   --btn-default-background-color: #3d3d3d99;
   --btn-default-border-color: #414144;
-  --btn-default-active-background-color: #3f3e4299;
-  --btn-default-active-border-color: #1c1c1d;
+  --btn-default-active-background-color: #27272b99;
+  --btn-default-active-border-color: #414144;
   --btn-default-active-text-color: #eeeeeebd;
-  --btn-default-hover-border-color: #414144;
+  --btn-default-hover-border-color: #59595e;
 
   --form-control-background-color: #0104094d;
   --form-control-border-color: #21262d;
