--- a/app/views/teams/show.html.erb
+++ b/app/views/teams/show.html.erb
@@ -7,7 +7,7 @@
         <% if @topics.blank? %>
         <div class="topic"><div class="no-result">暂无任何话题</div></div>
         <% else %>
-        <%= render partial: '/topics/topic', collection: @topics, locals: { suggest: false }, cached: -> (topic) { [topic, 'normal'] } %>
+          <%= render TopicComponent.with_collection(@topics, type: "team") %>
         <% end %>
       </div>
       <div class="card-footer">
