--- a/app/views/topics/index.html.erb
+++ b/app/views/topics/index.html.erb
@@ -7,9 +7,9 @@
     <div class="topics topics-<%= action_name %> card">
       <div class="card-body item-list">
         <% if @suggest_topics.present? %>
-          <%= render partial: '/topics/topic', collection: @suggest_topics, locals: { suggest: true } %>
+          <%= render TopicComponent.with_collection(@suggest_topics, type: "suggest") %>
         <% end %>
-        <%= render partial: '/topics/topic', collection: @topics, locals: { suggest: false } %>
+        <%= render TopicComponent.with_collection(@topics) %>
       </div>
       <% if  @topics.total_pages > 1 %>
         <div class="card-footer clearfix">
