Add ReplyComponent, ReplyToComponent

--- a/app/components/reply_component.html.erb
+++ b/app/components/reply_component.html.erb
@@ -1,15 +1,7 @@
 <% cache([reply, reply.user_avatar_raw, "raw:#{@show_raw}"]) do %>
-  <%
-  floor = reply_counter + 1
-  show_deleted = reply.deleted? && !@show_raw
-  class_names = ['reply']
-  class_names << 'popular' if reply.popular?
-  class_names << 'reply-system' if reply.system_event?
-  class_names << 'reply-deleted' if show_deleted
-%>
   <div class="<%= class_names.join(' ') %>" data-id="<%= reply.id %>" id="reply<%= floor %>">
     <div id="reply-<%= reply.id %>" data-floor="<%= floor %>">
-      <% if show_deleted %>
+      <% if show_deleted? %>
         <div class="deleted text-center"><%= floor %><%= t("common.floor")%> <%= t("common.has_deleted")%></div>
       <% elsif reply.system_event? %>
         <%= render '/replies/system_event', reply: reply %>
@@ -36,7 +28,7 @@
               <% end %>
             </span>
           </div>
-          <%= render 'replies/reply_to', reply: reply, show_body: false %>
+          <%= render ReplyToComponent.new(reply: reply, topic: @topic, show_body: false) %>
           <div class="markdown<%= ' deleted' if reply.deleted? %>">
             <%= reply.body_html %>
           </div>
