--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -50,7 +50,7 @@
     <% else %>
       <div id="replies" class="card" data-last-floor="<%= @replies.count(:all) %>">
         <div class="items card-body">
-          <%= render partial: "/replies/reply", collection: @replies %>
+          <%= render ReplyComponent.with_collection(@replies, topic: @topic, show_raw: @show_raw) %>
         </div>
       </div>
     <% end %>
