--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -19,6 +19,9 @@
 
   --divider-color: rgba(255, 255, 255, 0.1);
 
+  --filter-color: #6f6f6f;
+  --filter-active-color: #bb0b0b0;
+
   --btn-default-text-color: #c7c7c7;
   --btn-default-background-color: #3d3d3d99;
   --btn-default-border-color: #414144;
