--- a/app/javascript/homeland/dark-mode.scss
+++ b/app/javascript/homeland/dark-mode.scss
@@ -28,6 +28,7 @@
   --btn-default-active-background-color: #27272b99;
   --btn-default-active-border-color: #414144;
   --btn-default-active-text-color: #eeeeeebd;
+  --btn-default-hover-background-color: #4d4d4d99;
   --btn-default-hover-border-color: #59595e;
 
   --form-control-background-color: #0104094d;
