--- a/app/views/shared/_editor_toolbar.html.erb
+++ b/app/views/shared/_editor_toolbar.html.erb
@@ -16,7 +16,7 @@
     <% end %>
     <a id="editor-upload-image" href="#" title="<%= t("common.editor_add_image") %>" class="nav-link upload-button">
       <i class="upload-icon fa fa-image"></i>
-      <i class='loading fa fa-circle-o-notch fa-spin'></i>
+      <i class='loading fa fa-circle-notch fa-spin'></i>
     </a>
     <a href="#" class="nav-link preview" title="<%= t("common.editor_toolbar_preview") %>">
       <%= icon_tag("eye") %>
