--- a/app/views/admin/users/_form.html.erb
+++ b/app/views/admin/users/_form.html.erb
@@ -129,7 +129,7 @@
     </div>
     <div class="col-sm-6">
       <% if !@user.deleted? %>
-        <%= link_to '删除此用户', admin_user_path(@user.id), 'data-confirm' => '警告！此动作无法撤销，确定要删除么?', method: :delete, class: "btn btn-danger"  %>
+        <%= link_to 'Ban', admin_user_path(@user.id), method: :delete, remote: true, data: { confirm: "Are you sure to ban this user?" }, class: "btn btn-danger"  %>
       <% end %>
     </div>
   </div>
