--- a/app/views/errors/404.html.erb
+++ b/app/views/errors/404.html.erb
@@ -1,8 +1,8 @@
 <div id="error-page" class="card">
-  <div class="card-body">
-    <h1>Oops, Page not found</h1>
+  <div class="card-body" style="text-align: center;">
+    <h1>404 not found</h1>
     <p>
-      似乎没有这个页面哦！大哥，回去看看别的吧。
+      Sorry, Page not found
     </p>
   </div>
 </div>
