--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -27,6 +27,6 @@
     <td></td>
   </tr>
 
-  <%= render @users %>
+  <%= render collection: @users, partial: "user", as: :user %>
 </table>
 <%= paginate @users %>
