--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -5,13 +5,17 @@
 <% if @user.user_type == :user %>
 <div class="toolbar clearfix">
   <span class="pull-right">
-    <%= link_to '删除他的最近 10 篇话题', clean_admin_user_path(@user, type: 'topics'),
+   <%= link_to 'Delete recent 10 photos', clean_admin_user_path(@user, type: 'photos'),
                 method: 'delete', class: 'btn btn-warning',
-                data: { confirm: '注意！！！此动作是直接删除，无法恢复的，你确定要删除么？' } %>
+                data: { confirm: 'This action is not recoverable, are you sure?' } %>
 
-    <%= link_to '删除他的最近 10 条回帖', clean_admin_user_path(@user, type: 'replies'),
+    <%= link_to 'Delete recent 10 topics', clean_admin_user_path(@user, type: 'topics'),
                 method: 'delete', class: 'btn btn-warning',
-                data: { confirm: '注意！！！此动作是直接删除，无法恢复的，你确定要删除么？' } %>
+                data: { confirm: 'This action is not recoverable, are you sure?' } %>
+
+    <%= link_to 'Delete recent 10 replies', clean_admin_user_path(@user, type: 'replies'),
+                method: 'delete', class: 'btn btn-warning',
+                data: { confirm: 'This action is not recoverable, are you sure?' } %>
   </span>
 </div>
 <% end %>
