--- a/app/views/admin/site_configs/index.html.erb
+++ b/app/views/admin/site_configs/index.html.erb
@@ -4,6 +4,10 @@
 <h1><%= t("admin.site_configs.settings") %></h1>
 <ul class="list-group">
   <% Setting.editable_keys.each do |key| %>
+  
+    <% next if !Setting.captcha_enable? && key.in?(%w[use_recaptcha recaptcha_key recaptcha_secret]) %>
+    <% next if !Setting.use_recaptcha? && key.in?(%w[recaptcha_key recaptcha_secret]) %>
+    
     <% if !Setting::SYSTEM_KEYS.include?(key) %>
     <li class="list-group-item">
       <div class="mb-1">
