--- a/app/components/reply_component.html.erb
+++ b/app/components/reply_component.html.erb
@@ -2,7 +2,7 @@
   <div class="<%= class_names.join(' ') %>" data-id="<%= reply.id %>" id="reply<%= floor %>">
     <div id="reply-<%= reply.id %>" data-floor="<%= floor %>">
       <% if show_deleted? %>
-        <div class="deleted text-center"><%= floor %><%= t("common.floor")%> <%= t("common.has_deleted")%></div>
+        <div class="deleted text-center"><%= floor %> <%= t("common.floor")%> <%= t("common.has_deleted")%></div>
       <% elsif reply.system_event? %>
         <%= render '/replies/system_event', reply: reply %>
       <% else %>
@@ -13,25 +13,25 @@
               <%= user_name_tag(reply.user) %>
             </span>
             <span class="sub-info">
-              <span class='floor'>#<%= floor %></span> ·
+              <span class='floor'>#<%= floor %></span>
               <a class="time" href="#reply-<%= reply.id %>"><%= timeago(reply.created_at) %></a>
-            </span>
-            <span class="opts pull-right">
-              <% if !reply.deleted? %>
-                <span class="hideable">
-                  <%= link_to('', edit_topic_reply_path(@topic,reply), class: "edit fa fa-edit", title: "修改回帖", data: { uid: reply.user_id, prefetch: false } )%>
-                  <%= link_to('', "#", 'data-id' => reply.id, 'data-login' => reply.user_login,
-                  title: t("topics.reply_this_floor"), class: "btn-reply fa fa-reply" )
-              %>
-                </span>
-                <%= likeable_tag(reply, cache: true) %>
-              <% end %>
             </span>
           </div>
           <%= render ReplyToComponent.new(reply: reply, topic: @topic, show_body: false) %>
           <div class="markdown<%= ' deleted' if reply.deleted? %>">
             <%= reply.body_html %>
           </div>
+          <% if !reply.deleted? %>
+          <div class="actions opts">
+            <div class="hideable">
+              <%= link_to('', "#", 'data-id' => reply.id, 'data-login' => reply.user_login, title: t("topics.reply_this_floor"), class: "btn-reply fa fa-reply" ) %>
+              <%= link_to('', edit_topic_reply_path(@topic,reply), class: "edit fa fa-edit", title: "修改回帖", data: { uid: reply.user_id, prefetch: false } )%>
+            </div>
+            <div class="actions-left">
+              <%= likeable_tag(reply, cache: true) %>
+            </div>
+          </div>
+          <% end %>
         </div>
       <% end %>
     </div>
