--- a/app/javascript/homeland/markdown.scss
+++ b/app/javascript/homeland/markdown.scss
@@ -70,7 +70,7 @@
       font-family: serif;
       left: 0px;
       top: -10px;
-      color: #ccc;
+      color: var(--default);
     }
   }
   pre {
