--- a/app/views/users/_info.html.erb
+++ b/app/views/users/_info.html.erb
@@ -1,4 +1,4 @@
- <% if @user.contacts.present? %>
+<% if @user.contacts.any? %>
 <div class="card userinfo">
   <div class="card-body">
       <div class="user-profile-fields">
