--- a/app/views/users/_sidebar.html.erb
+++ b/app/views/users/_sidebar.html.erb
@@ -62,16 +62,16 @@
           <%= link_to(icon_tag("rss"), feed_user_url(@user), target: '_blank', rel: 'nofollow') %>
         </div>
       </div>
-      <div class="follow-info row hide-ios">
-        <div class="col-sm-4 followers" data-login="<%= @user.login %>">
+      <div class="follow-info flex aic jcsb hide-ios">
+        <div class="followers" data-login="<%= @user.login %>">
           <%= link_to @user.followers_count, followers_user_path(@user), class: "counter" %>
           <%= link_to "关注者", followers_user_path(@user), class: "text" %>
         </div>
-        <div class="col-sm-4 following">
+        <div class="following">
           <%= link_to @user.following_count, following_user_path(@user), class: "counter" %>
           <%= link_to "正在关注", following_user_path(@user), class: "text" %>
         </div>
-        <div class="col-sm-4 stars">
+        <div class="stars">
           <%= link_to @user.favorites_count, favorites_user_path(@user), class: "counter" %>
           <%= link_to "收藏", favorites_user_path(@user), class: "text" %>
         </div>
