--- a/app/views/admin/replies/index.html.erb
+++ b/app/views/admin/replies/index.html.erb
@@ -39,7 +39,11 @@
     <td><%= link_to(reply.user.login, edit_admin_user_path(reply.user_id), target: "_blank") if reply.user %></td>
     <td><%= l reply.created_at, format: :short %></td>
     <td><%= link_to '', edit_admin_reply_path(reply), class: "fa fa-edit" %>
-    <%= link_to '', admin_reply_path(reply), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
+    <% if reply.deleted_at.blank? %>
+      <%= link_to '', admin_reply_path(reply), 'data-confirm' => 'Are you sure?', method: :delete, remote: true, class: "fa fa-trash" %></td>
+    <% else %>
+      <%= link_to "", revert_admin_reply_path(reply), title: t("common.revert"), 'data-confirm' => 'Are you sure?', method: :post, class: "fa fa-undo" %>
+    <% end %>
   </tr>
 <% end %>
 </table>
